--- a/Django_project/mysite/templates/pybo/question_list.html
+++ b/Django_project/mysite/templates/pybo/question_list.html
@@ -1,7 +1,9 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-
 <!-- ---------------------------------------- [edit] ---------------------------------------- -->
+{% extends 'base.html' %}
+{% block content %}
+<!-- ---------------------------------------------------------------------------------------- -->
 <div class="container my-3">
     <table class="table">
         <thead>
@@ -30,4 +32,6 @@
         </tbody>
     </table>
 </div>
+<!-- ---------------------------------------- [edit] ---------------------------------------- -->
+{% endblock %}
 <!-- ---------------------------------------------------------------------------------------- -->
