--- a/Django_project/mysite/templates/pybo/question_detail.html
+++ b/Django_project/mysite/templates/pybo/question_detail.html
@@ -1,6 +1,9 @@
-<!-- ---------------------------------------- [edit] ---------------------------------------- -->
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+<!-- ---------------------------------------- [edit] ---------------------------------------- -->
+{% extends 'base.html' %}
+{% block content %}
+<!-- ---------------------------------------------------------------------------------------- -->
 <div class="container my-3">
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     <div class="card my-3">
@@ -34,4 +37,6 @@
         <input type="submit" value="답변등록" class="btn btn-primary">
     </form>
 </div>
+<!-- ---------------------------------------- [edit] ---------------------------------------- -->
+{% endblock %}
 <!-- ---------------------------------------------------------------------------------------- -->
