--- a/Django_project/mysite/templates/base.html
+++ b/Django_project/mysite/templates/base.html
@@ -1,6 +1,5 @@
 <!-- ---------------------------------------- [edit] ---------------------------------------- -->
-<!-- base.html 템플릿은 모든 템플릿이 상속해야 하는 템플릿으로 표준 HTML문서의 기본 틀! -->
-% load static %}
+{% load static %}
 <!doctype html>
 <html lang="ko">
 <head>
