--- a/Django_project/mysite/templates/pybo/question_detail.html
+++ b/Django_project/mysite/templates/pybo/question_detail.html
@@ -1,9 +1,9 @@
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 <!-- ---------------------------------------- [edit] ---------------------------------------- -->
 {% extends 'base.html' %}
 {% block content %}
 <!-- ---------------------------------------------------------------------------------------- -->
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 <div class="container my-3">
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     <div class="card my-3">
@@ -31,6 +31,18 @@
     {% endfor %}
     <form action="{% url 'pybo:answer_create' question.id %}" method="post" class="my-3">
         {% csrf_token %}
+        <!-- -------------------------------------- [edit] -------------------------------------- -->
+        {% if form.errors %}
+        <div class="alert alert-danger" role="alert">
+        {% for field in form %}
+            {% if field.errors %}
+            <strong>{{ field.label }}</strong>
+            {{ field.errors }}
+            {% endif %}
+        {% endfor %}
+        </div>
+        {% endif %}
+        <!-- ------------------------------------------------------------------------------------ -->
         <div class="form-group">
             <textarea name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
