--- a/Django_project/mysite/templates/pybo/question_list.html
+++ b/Django_project/mysite/templates/pybo/question_list.html
@@ -1,9 +1,9 @@
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 <!-- ---------------------------------------- [edit] ---------------------------------------- -->
 {% extends 'base.html' %}
 {% block content %}
 <!-- ---------------------------------------------------------------------------------------- -->
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 <div class="container my-3">
     <table class="table">
         <thead>
@@ -31,7 +31,9 @@
         {% endif %}
         </tbody>
     </table>
+        <!-- ---------------------------------------- [edit] ---------------------------------------- -->
+        <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a>
+        <!-- ---------------------------------------------------------------------------------------- -->
 </div>
-<!-- ---------------------------------------- [edit] ---------------------------------------- -->
+
 {% endblock %}
-<!-- ---------------------------------------------------------------------------------------- -->
