--- a/Django_project/mysite/templates/base.html
+++ b/Django_project/mysite/templates/base.html
@@ -13,10 +13,18 @@
     <title>Hello, pybo!</title>
 </head>
 <body>
+<!-- ---------------------------------------- [edit] ---------------------------------------- -->
+{% include "navbar.html" %}
+<!-- ---------------------------------------------------------------------------------------- -->
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 {% block content %}
 {% endblock %}
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
+
+<!-- jQuery JS -->
+<!-- ※ bootstrap.min.js 는 jquery-3.5.1.min.js를 필요로 하므로 jquery-3.4.1.min.js를 먼저 적어주어야 한다. 순서에 유의하도록 하자.-->
+<script src="{% static 'jquery-3.5.1.min.js' %}"></script>
+<!-- Bootstrap JS -->
+<script src="{% static 'bootstrap.min.js' %}"></script>
 </body>
 </html>
-<!-- ---------------------------------------------------------------------------------------- -->
