--- a/Django_project/mysite/templates/pybo/question_list.html
+++ b/Django_project/mysite/templates/pybo/question_list.html
@@ -18,16 +18,21 @@
         {% if question_list %}
         {% for question in question_list %}
         <tr>
-            <td>
+            <td><!--* 번호 *-->
                 <!-- ---------------------------------------- [edit] ---------------------------------------- -->
                 <!-- 번호 = 전체건수 - 시작인덱스 - 현재인덱스 + 1 -->
                 {{ question_list.paginator.count|sub:question_list.start_index|sub:forloop.counter0|add:1 }}
                 <!-- ---------------------------------------------------------------------------------------- -->
             </td>
-            <td>
+            <td><!--* 제목 *-->
                 <a href="{% url 'pybo:detail' question.id %}">{{ question.subject }}</a>
+                <!-- ---------------------------------------- [edit] ---------------------------------------- -->
+                {% if question.answer_set.count > 0 %}
+                <span class="text-danger small ml-2">{{ question.answer_set.count }}</span>
+                {% endif %}
+                <!-- ---------------------------------------------------------------------------------------- -->
             </td>
-            <td>{{ question.create_date }}</td>
+            <td>{{ question.create_date }}</td><!--* 작성일시 *-->
         </tr>
         {% endfor %}
         {% else %}
