--- a/Django_project/mysite/templates/navbar.html
+++ b/Django_project/mysite/templates/navbar.html
@@ -1,4 +1,3 @@
-<!-- ---------------------------------------- [edit] ---------------------------------------- -->
 <!-- 네비게이션바 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <a class="navbar-brand" href="{% url 'pybo:index' %}">Pybo</a>
@@ -9,9 +8,12 @@
     <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item ">
-                <a class="nav-link" href="#">로그인</a>
+                {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a>
+                {% else %}
+                <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
+                {% endif %}
             </li>
         </ul>
     </div>
 </nav>
-<!-- ---------------------------------------------------------------------------------------- -->
