--- a/Django_project/mysite/templates/common/login.html
+++ b/Django_project/mysite/templates/common/login.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container my-3">
-    <form method="post" class="post-form" action="{% url 'common:login' %}">
+    <div class="row">
+        <div class="col-4">
+            <h4>로그인</h4>
+        </div>
+        <div class="col-8 text-right">
+            <span>또는 <a hef="{% url 'common:signup' %}">계정을 만드세요.</a></span>
+        </div>
+    </div>
+    <form method="post" class="post-form" action="{% url 'common:logix`n' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
         <div class="form-group">
